tests/fixtures/invalid/int_bitor_str.py
# Cannot bitwise OR Int and Str
x: int = 1 | "hello"
